--- a/index.html
+++ b/index.html
@@ -9,50 +9,50 @@
   </head>
   <body>
     <div id="audio_embeds">
-      <audio id="cAudio" controls preload="auto">
-        <!-- <source src="media/c_note.mp3" type="audio/mpeg"></source> -->
+      <audio id="cAudio">
+        <source src="media/c_note.mp3" type="audio/mpeg"></source>
         <source src="file:///Users/mengyao/ADA_class/week16_trek/js-music-keyboard/media/c_note.ogg" type="audio/ogg"></source>
-        <!-- <source src="media/c_note.wav" type="audio/wav"></source> -->
+        <source src="media/c_note.wav" type="audio/wav"></source>
       </audio>
       <audio id="dAudio">
         <source src="media/d_note.mp3" type="audio/mpeg"></source>
-        <source src="media/d_note.ogg" type="audio/ogg"></source>
+        <source src="file:///Users/mengyao/ADA_class/week16_trek/js-music-keyboard/media/d_note.ogg"></source>
         <source src="/media/d_note.wav" type="audio/wav"></source>
       </audio>
       <audio id="eAudio">
         <source src="media/e_note.mp3" type="audio/mpeg"></source>
-        <source src="media/e_note.ogg" type="audio/ogg"></source>
+        <source src="file:///Users/mengyao/ADA_class/week16_trek/js-music-keyboard/media/e_note.ogg" type="audio/ogg"></source>
         <source src="media/e_note.wav" type="audio/wav"></source>
       </audio>
       <audio id="fAudio">
         <source src="media/f_note.mp3" type="audio/mpeg"></source>
-        <source src="media/f_note.ogg" type="audio/ogg"></source>
+        <source src="file:///Users/mengyao/ADA_class/week16_trek/js-music-keyboard/media/f_note.ogg" type="audio/ogg"></source>
         <source src="media/f_note.wav" type="audio/wav"></source>
       </audio>
       <audio id="gAudio">
         <source src="media/g_note.mp3" type="audio/mpeg"></source>
-        <source src="media/g_note.ogg" type="audio/ogg"></source>
+        <source src="file:///Users/mengyao/ADA_class/week16_trek/js-music-keyboard/media/g_note.ogg" type="audio/ogg"></source>
         <source src="media/g_note.wav" type="audio/wav"></source>
       </audio>
       <audio id="aAudio">
         <source src="media/a_note.mp3" type="audio/mpeg"></source>
-        <source src="media/a_note.ogg" type="audio/ogg"></source>
+        <source src="file:///Users/mengyao/ADA_class/week16_trek/js-music-keyboard/media/a_note.ogg" type="audio/ogg"></source>
         <source src="media/a_note.wav" type="audio/wav"></source>
       </audio>
       <audio id="bAudio">
         <source src="media/b_note.mp3" type="audio/mpeg"></source>
-        <source src="media/b_note.ogg" type="audio/ogg"></source>
+        <source src="file:///Users/mengyao/ADA_class/week16_trek/js-music-keyboard/media/b_note.ogg" type="audio/ogg"></source>
         <source src="media/b_note.wav" type="audio/wav"></source>
       </audio>
     </div>
     <div class="instrument">
       <button class="note c" onclick="document.getElementById('cAudio').play()">c</button>
-      <button class="note d">d</button>
-      <button class="note e">e</button>
-      <button class="note f">f</button>
-      <button class="note g">g</button>
-      <button class="note a">a</button>
-      <button class="note b">b</button>
+      <button class="note d" onclick="document.getElementById('dAudio').play()">d</button>
+      <button class="note e" onclick="document.getElementById('eAudio').play()">e</button>
+      <button class="note f" onclick="document.getElementById('fAudio').play()">f</button>
+      <button class="note g" onclick="document.getElementById('gAudio').play()">g</button>
+      <button class="note a" onclick="document.getElementById('aAudio').play()">a</button>
+      <button class="note b" onclick="document.getElementById('bAudio').play()">b</button>
     </div>
   </body>
 </html>
