--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
       </audio>
     </div>
     <div class="instrument">
-      <button class="note c" onclick="document.getElementById('cAudio').play()">c</button>
-      <button class="note d" onclick="document.getElementById('dAudio').play()">d</button>
-      <button class="note e" onclick="document.getElementById('eAudio').play()">e</button>
-      <button class="note f" onclick="document.getElementById('fAudio').play()">f</button>
-      <button class="note g" onclick="document.getElementById('gAudio').play()">g</button>
-      <button class="note a" onclick="document.getElementById('aAudio').play()">a</button>
-      <button class="note b" onclick="document.getElementById('bAudio').play()">b</button>
+      <button class="note c">c</button>
+      <button class="note d">d</button>
+      <button class="note e">e</button>
+      <button class="note f">f</button>
+      <button class="note g">g</button>
+      <button class="note a">a</button>
+      <button class="note b">b</button>
     </div>
   </body>
 </html>
